Devops sync. A branch is synced.
Synced devops commits:

Hash: 17627f63c13e4141e1ca4f03e6a331530aa888ca
Message: test
CreatedAt: 2025-08-28T11:21:23.351Z

Hash: fd05dcd8df3bb70d5bedd910f6b71ea5d5e828e8
Message: test
CreatedAt: 2025-08-28T06:26:09.660Z

Hash: 18fafbe574a6bb08748e154cff22909fb87e2ef4
Message: test
CreatedAt: 2025-08-26T14:29:03.249Z

Hash: 3c54fad67850060be5b2e6b1a04997ad1ce687b8
Message: tset
CreatedAt: 2025-08-26T14:28:56.471Z

Hash: be507d5f1e3cb09b81e92b27f359a947497f1781
Message: test
CreatedAt: 2025-08-26T14:28:50.827Z

Hash: 870df4fe6d8236128198bfadf32d58f1229a1422
Message: test
CreatedAt: 2025-08-26T14:28:45.148Z

Hash: 152cca0925121c8b9cdf7b19c8bbc20d26166cc0
Message: test
CreatedAt: 2025-08-26T14:28:39.241Z

Hash: 505218112ae8446a4ddd47e327ef51f9357c04be
Message: test
CreatedAt: 2025-08-26T14:28:32.536Z

Hash: 83e7230c6df7c21ebb15ade1e16299713b89291b
Message: test
CreatedAt: 2025-08-26T14:28:25.760Z

Hash: 86edd07422ca7f5d7031f1148d57f67ec1d2b4fb
Message: test
CreatedAt: 2025-08-26T11:01:18.270Z

Hash: 343d7ed03ff27559272f839a537d788ba252750b
Message: test
CreatedAt: 2025-08-26T11:01:18.270Z

Hash: 05da007c62baa453ccfd17a49fa4f3556928c046
Message: test
CreatedAt: 2025-08-26T11:01:18.270Z

Hash: c6d91f470a4d5192e20e4dc760eacf713fefbd41
Message: test
CreatedAt: 2025-08-26T11:01:18.270Z

Hash: 5f28a48768bcd3efbb0d6ad0d5beaeaae2b2b671
Message: Init commit
CreatedAt: 2025-08-26T11:01:18.270Z

--- a/force-app/main/default/reports/EnablementDashboardReports_sfdcSESv60.reportFolder-meta.xml
+++ b/force-app/main/default/reports/EnablementDashboardReports_sfdcSESv60.reportFolder-meta.xml
@@ -5,5 +5,5 @@
         <sharedTo>AllInternalUsers</sharedTo>
         <sharedToType>Organization</sharedToType>
     </folderShares>
-    <name>Enablement Dashboard Reports Summer &apos;24</name>
+    <name>Enablement Dashboard Reports Spring &apos;24</name>
 </ReportFolder>
